# third_party_Linux_Kernel

./: Linux_Kernel.gni  OAT.xml  README.OpenSource  bundle.json
fs/jffs2/: acl.h  background.c  build.c  compr_zlib.c  dir.c  file.c  fs.c  gc.c  jffs2.h  jffs2_fs_i.h  jffs2_fs_sb.h  malloc.c  nodelist.h  os-linux.h  readinode.c  scan.c  summary.c  summary.h  super.c  write.c  xattr.h
include/linux/: cmdline-parser.h
include/uapi/linux/: magic.h
